<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="INSTRUCTION"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">


        <ImageButton
            android:id="@+id/goback"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/button_cancel" />

        <TextView
            android:textSize="10dp"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver 1.1509071020"
            android:id="@+id/textView6"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <ScrollView
        android:scrollbars="none"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/creator"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/bar" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="17dp"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="29dp"
                android:text="@string/one"
                />

            <TextView
                android:textSize="17dp"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/two"
                />

            <TextView
                android:textSize="17dp"
                android:layout_below="@+id/textView2"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:id="@+id/textView3"
                android:layout_alignStart="@+id/textView2" />

            <TextView
                android:textSize="17dp"
                android:layout_below="@+id/textView3"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:id="@+id/textView4"
                android:layout_alignStart="@+id/textView2" />

            <TextView
                android:textSize="17dp"
                android:layout_below="@+id/textView4"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/textView8"
                android:layout_alignStart="@+id/textView2" />

            <TextView
                android:textSize="17dp"
                android:layout_below="@+id/textView8"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/textView7"
                android:layout_alignStart="@+id/textView2" />


            <EditText
                android:layout_marginTop="40dp"
                android:layout_below="@+id/textView7"
                android:background="#00000000"
                android:textSize="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="lccandol@naver.com"
                android:id="@+id/textView5"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


        </ScrollView>


</RelativeLayout>